Archive2/cf/07d22b1e757d71/output
main.cpp: In function 'int main()':
main.cpp:6:17: error: array must be initialized with a brace-enclosed initializer
     A a[10] = A();
                 ^
main.cpp:6:7: warning: unused variable 'a' [-Wunused-variable]
     A a[10] = A();
       ^
